--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://volodymyrkushnir.com/assets/stylesheets/base.css"
+    />
     <title>Résumé</title>
   </head>
   <body>
