Add <main> (closes #9)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Résumé</title>
   </head>
   <body>
-    ― Hello World! &#x1F609;
+    <main>
+      <article>
+        <div class="page" style="border-color: midnightblue;">
+          <!-- Content -->
+        </div>
+      </article>
+    </main>
   </body>
 </html>
