Some minor changes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
       href="https://volodymyrkushnir.com/assets/stylesheets/base.css"
     />
     <title>Résumé</title>
+    <style>
+      .avatar-ext {
+        border-radius: 50%;
+        width: 70%;
+        height: 70%;
+        margin-top: 1rem;
+        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+      }
+    </style>
   </head>
   <body>
     <main>
       <article>
-        <div class="page" style="border-color: midnightblue;">
+        <div class="page" style="border-color: #b19f8f;">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
@@ -19,13 +28,7 @@
                   <img
                     src="./assets/images/avatar.jpg"
                     alt="Avatar"
-                    class="avatar"
-                    style="
-                    border-radius: 50%;
-                    width: 70%;
-                    height: 70%;
-                    margin-top: 1rem;
-                  "
+                    class="avatar avatar-ext"
                   />
                 </div>
               </div>
@@ -33,7 +36,6 @@
                 <div class="stackable grid">
                   <div class="sixteen wide column">
                     <h1 class="name">Dmytrii Puzyr</h1>
-                    <div class="job">Student at FICT KPI</div>
                     <ul class="contacts">
                       <li>
                         <a href="https://linkedin.com/in/dpuzyr" class="facebook">
@@ -92,7 +94,7 @@
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
                     <p>
-                      Hello! I'm a tall guy (get your height jokes prepared) who came to
+                      Hello! I'm a tall guy (get your height jokes ready) who came to
                       Kyiv to try his best in the IT industry. Love to do some front-end
                       stuff like learning HTML/CSS, JS, React.js and eating cookies. Yep,
                       I know the difference between a markup and a programming language.
