--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
         border-radius: 50%;
         width: 70%;
         height: 70%;
-        margin-top: 1rem;
-        box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
       }
       .color-gray {
         color: #222;
@@ -29,7 +27,7 @@
               <div class="three wide center aligned column">
                 <div class="avatar-wrapper">
                   <img
-                    src="./assets/images/avatar.jpg"
+                    src="./assets/images/avatar.png"
                     alt="Avatar"
                     class="avatar avatar-ext"
                   />
