Fill timeline with additional content (closes #17)

--- a/index.html
+++ b/index.html
@@ -140,10 +140,33 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
                 <section>
                   <h3>Timeline</h3>
                   <ul class="timeline">
+                    <li>
+                      <p>
+                        <em>5<sup>th</sup> February 2019 - 18<sup>th</sup> April 2019</em>
+                      </p>
+                      <p>
+                        <strong>
+                          Developed a front-end of
+                          <a
+                            href="https://github.com/IINamelessII/YesOrNo"
+                            rel="external"
+                          >
+                            <em>YesOrNo</em>
+                          </a>
+                          with React.js
+                        </strong>
+                      </p>
+                      <ul>
+                        <li>
+                          <p>
+                            A sincere try to produce a real-world project 🌚.
+                          </p>
+                        </li>
+                      </ul>
+                    </li>
                     <li>
                       <p>
                         <em>1<sup>st</sup> september 2017 - nowadays</em>
@@ -152,15 +175,40 @@
                       <ul>
                         <li>
                           <p>
-                            First programming language passion - Javascipt (kinda dizzy
+                            Decide to invest my time into learning front-end (in terms of
+                            importance this one is second after deciding not to eat that
+                            strange booger in kindergarten of course).
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            First programming language passion - Javascipt (feeling dizzy
                             about that, love TypeScript more now).
                           </p>
                         </li>
                         <li>
                           <p>
-                            One of the most important decisions in my life (after deciding
-                            not to eat that strange booger in kindergarten ofc) - to
-                            invest my time into learning front-end.
+                            Start learning and practicing React.
+                          </p>
+                        </li>
+                      </ul>
+                    </li>
+                    <li>
+                      <p>
+                        <em> 31<sup>st</sup> January 2016 </em>
+                      </p>
+                      <p>
+                        <strong>
+                          Published my first
+                          <a href="http://cubix-rube.azurewebsites.net/" rel="external">
+                            website</a
+                          >! 🎉
+                        </strong>
+                      </p>
+                      <ul>
+                        <li>
+                          <p>
+                            Makes me feel warm when I catch myself thinking of it.
                           </p>
                         </li>
                       </ul>
@@ -172,7 +220,15 @@
                       <p><strong>Studying at school</strong></p>
                       <ul>
                         <li>
-                          <p>First programming experience at a programming olympiad.</p>
+                          <p>
+                            Taking part in different school olympiads 📚.
+                          </p>
+                        </li>
+                        <li>
+                          <p>
+                            First programming experience with Pascal at a programming
+                            olympiad.
+                          </p>
                         </li>
                       </ul>
                     </li>
