Optimise SEO (closes #23 )

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="description" content="Basically, a résumé of Dmytrii Puzyr." />
     <meta name="google" content="nositelinkssearchbox" />
     <meta name="google" content="notranslate" />
     <meta name="robots" content="index,follow" />
