some visual fixes & minor changes (closes #24)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="white" />
     <meta
       property="og:description"
-      content="&mdash; Hello! I'm a tall guy (get your height jokes ready) who came to Kyiv to try his best in the IT industry. Love to do some front-end stuff like learning HTML/CSS, JS, React.js and eating cookies."
+      content="••• Hello! I'm a motivated student who came to Kyiv to try his best in the IT industry. Love to do some front-end stuff like learning HTML/CSS, JS, React.js and eating cookies. Yep, I know the difference between a markup and a programming language."
     />
     <meta property="og:image:alt" content="Screenshot of the résumé" />
     <meta property="og:image:height" content="1800" />
@@ -37,33 +37,25 @@
       rel="stylesheet"
       href="https://volodymyrkushnir.com/assets/stylesheets/base.css"
     />
-    <style>
-      .avatar-ext {
-        border-radius: 50%;
-        width: 70%;
-        height: 70%;
-      }
-      .color-gray {
-        color: #222;
-      }
-    </style>
+    <link rel="stylesheet" href="./assets/styles/base-extension.css" />
   </head>
   <body>
-    <main>
+    <main class="main-ext">
       <article>
-        <div class="page" style="border-color: #5d5c53;">
+        <div class="page page-ext" style="border-color: #5d5c53;">
           <div class="stackable grid">
             <div class="row">
-              <div class="four wide center aligned column">
+              <div class="three wide center aligned column">
                 <div class="avatar-wrapper">
                   <img
                     src="./assets/images/avatar.png"
                     alt="Avatar"
                     class="avatar avatar-ext"
+                    aria-label="My photo"
                   />
                 </div>
               </div>
-              <div class="twelve wide column">
+              <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
                     <h1 class="name">Dmytrii Puzyr</h1>
@@ -125,7 +117,7 @@
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
                     <p>
-                      Hello! I'm a tall guy (get your height jokes ready) who came to Kyiv
+                      &bull;&bull;&bull; Hello! I'm a motivated student who came to Kyiv
                       to try his best in the IT industry. Love to do some front-end stuff
                       like learning HTML/CSS, JS, React.js and eating cookies. Yep, I know
                       the difference between a markup and a programming language.
