fix and refactor og tags (closes #34)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Dmytrii Puzyr &bull; Résumé</title>
     <meta name="description" content="Basically, a résumé of Dmytrii Puzyr." />
     <meta name="google" content="nositelinkssearchbox" />
     <meta name="google" content="notranslate" />
@@ -11,24 +12,23 @@
     <meta name="googlebot" content="index,follow" />
     <meta name="subject" content="It's just a résumé." />
     <meta name="theme-color" content="white" />
+    <meta property="og:title" content="Dmytrii Puzyr &bull; Résumé" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yugisu.github.io/homepage/" />
+    <meta property="og:locale" content="en_US" />
     <meta
       property="og:description"
       content="••• Hello! I'm a motivated student who came to Kyiv to try his best in the IT industry. Love to do some front-end stuff like learning HTML/CSS, JS, React.js and eating cookies. Yep, I know the difference between a markup and a programming language."
     />
-    <meta property="og:image:alt" content="Screenshot of the résumé" />
-    <meta property="og:image:height" content="1800" />
-    <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:image:width" content="2880" />
     <meta
       property="og:image"
       content="https://yugisu.github.io/homepage/assets/images/og-image.en_US.jpg"
     />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:title" content="Dmytrii Puzyr &bull; Résumé" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yugisu.github.io/homepage/" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+    <meta property="og:image:alt" content="Screenshot of the résumé" />
     <base href="https://yugisu.github.io/homepage/" />
-    <title>Dmytrii Puzyr &bull; Résumé</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link rel="me" href="mailto:slymahel@gmail.com" />
     <link rel="me" href="skype:joylife44" />
